@@ -1,0 +1,17 @@
+/*
+Found in the http://net.tutsplus.com/tutorials/html-css-techniques/how-to-make-all-browsers-render-html5-mark-up-correctly-even-ie6/
+page.
+
+It must be included in the pages containing the black menu to make ie6
+uparse some HTML5 elements.
+
+Reference: http://ejohn.org/blog/html5-shiv/
+Reference: http://remysharp.com/2009/01/07/html5-enabling-script/
+
+*/
+
+document.createElement("article");
+document.createElement("footer");
+document.createElement("header");
+document.createElement("hgroup");
+document.createElement("nav");
